--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,8 @@ name: Build and Push Docker Image
 
 on:
   push:
-    branches: [ main, add-ci ]
+    branches: [ main ]
+    tags: [ 'v*.*.*' ]
 
 env:
   REGISTRY: docker.io
@@ -15,6 +16,8 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
@@ -33,22 +36,8 @@ jobs:
         images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
         tags: |
           type=ref,event=branch
+          type=ref,event=tag
           type=raw,value=latest,enable={{is_default_branch}}
-          type=raw,value=hash-sig-cli-{{ github.run_number }}
-
-    - name: Debug generated tags
-      run: |
-        echo "🔍 Event: ${{ github.event_name }}"
-        echo "🌿 Branch: ${{ github.ref_name }}"
-        echo "📋 Generated tags:"
-        echo "${{ steps.meta.outputs.tags }}"
-        echo ""
-        echo "🏷️  Individual tags:"
-        echo "${{ steps.meta.outputs.tags }}" | tr ',' '\n' | while read tag; do
-          [ -n "$tag" ] && echo "  - $tag"
-        done
-        echo ""
-        echo "📊 Tag count: $(echo '${{ steps.meta.outputs.tags }}' | tr ',' '\n' | grep -v '^$' | wc -l)"
 
     - name: Build and push Docker image
       uses: docker/build-push-action@v5
