created auto release

--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -1,16 +1,21 @@
-name: Build and Push Docker Image
+name: Auto Release on Release Branch
 
 on:
-  push:
-    branches: [ main ]
-    tags: [ 'v*.*.*' ]
+  pull_request:
+    types: [ closed ]
+    branches: [ release ]
 
 env:
   REGISTRY: docker.io
   IMAGE_NAME: blockblaz/hash-sig-cli
 
+permissions:
+  contents: write
+
 jobs:
-  build:
+  auto-release:
+    # Only run if PR was merged to release branch (not just closed)
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
 
     steps:
@@ -29,15 +34,21 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
+    - name: Read VERSION file
+      id: get_version
+      run: |
+        VERSION=$(cat VERSION)
+        echo "version=$VERSION" >> $GITHUB_OUTPUT
+        echo "tag=v$VERSION" >> $GITHUB_OUTPUT
+
     - name: Extract metadata
       id: meta
       uses: docker/metadata-action@v5
       with:
         images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
         tags: |
-          type=ref,event=branch
-          type=ref,event=tag
-          type=raw,value=latest,enable={{is_default_branch}}
+          type=raw,value=latest
+          type=raw,value=${{ steps.get_version.outputs.version }}
 
     - name: Build and push Docker image
       uses: docker/build-push-action@v5
