--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,8 @@ name = "hashsig"
 path = "src/main.rs"
 
 [dependencies]
-# Hash-sig library (from GitHub repository)
-hashsig = { git = "https://github.com/b-wagn/hash-sig.git" }
+# LeanSig library (from GitHub repository)
+leansig = { git = "https://github.com/leanEthereum/leanSig.git" }
 
 # CLI framework
 clap = { version = "4.5", features = ["derive"] }
